miniC.output
Terminals unused in grammar

   RELA
   EQLT


State 17 conflicts: 2 shift/reduce
State 19 conflicts: 2 shift/reduce
State 51 conflicts: 7 shift/reduce
State 55 conflicts: 7 shift/reduce
State 56 conflicts: 7 shift/reduce
State 57 conflicts: 7 shift/reduce
State 87 conflicts: 7 shift/reduce
State 88 conflicts: 7 shift/reduce
State 105 conflicts: 10 shift/reduce
State 106 conflicts: 10 shift/reduce
State 108 conflicts: 7 shift/reduce
State 130 conflicts: 1 shift/reduce
State 133 conflicts: 10 shift/reduce
State 134 conflicts: 10 shift/reduce
State 135 conflicts: 10 shift/reduce
State 136 conflicts: 10 shift/reduce
State 137 conflicts: 10 shift/reduce
State 138 conflicts: 10 shift/reduce
State 139 conflicts: 10 shift/reduce
State 140 conflicts: 10 shift/reduce
State 141 conflicts: 10 shift/reduce
State 142 conflicts: 10 shift/reduce
State 149 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: DECLARATION FUNCTION
    2        | DECLARATION
    3        | FUNCTION

    4 DECLARATION: INT IDENTIFIER ';' DECLARATION
    5            | FLOAT IDENTIFIER ';' DECLARATION
    6            | INT IDENTIFIER ';'
    7            | FLOAT IDENTIFIER ';'

    8 IDENTIFIER: ID '[' INTNUM ']' ',' IDENTIFIER
    9           | ID ',' IDENTIFIER
   10           | ID '[' INTNUM ']'
   11           | ID

   12 FUNCTION: INT ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT ID '(' PARAMETER ')' COMPOUNDSTMT
   14         | FLOAT ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT ID '(' PARAMETER ')' COMPOUNDSTMT
   16         | INT ID '(' ')' COMPOUNDSTMT FUNCTION
   17         | INT ID '(' ')' COMPOUNDSTMT
   18         | FLOAT ID '(' ')' COMPOUNDSTMT FUNCTION
   19         | FLOAT ID '(' ')' COMPOUNDSTMT

   20 PARAMETER: INT IDENTIFIER PARAMETER
   21          | INT IDENTIFIER

   22 COMPOUNDSTMT: '{' DECLARATION STMT '}'
   23             | '{' STMT '}'
   24             | '{' DECLARATION '}'
   25             | '{' '}'

   26 STMT: ASSIGN ';' STMT
   27     | ASSIGN ';'
   28     | CALL ';' STMT
   29     | CALL ';'
   30     | RETURN EXPR ';' STMT
   31     | RETURN EXPR ';'
   32     | WHILE_S STMT
   33     | WHILE_S
   34     | FOR_S STMT
   35     | FOR_S
   36     | IF_S STMT
   37     | IF_S
   38     | COMPOUNDSTMT STMT
   39     | COMPOUNDSTMT

   40 ASSIGN: ID '[' EXPR ']' '=' EXPR
   41       | ID '=' EXPR

   42 CALL: ID '(' ARG ')' ';'
   43     | ID '(' ')' ';'

   44 ARG: EXPR ',' ARG
   45    | EXPR

   46 WHILE_S: WHILE '(' EXPR ')' STMT
   47        | DO STMT WHILE '(' EXPR ')' ';'

   48 FOR_S: FOR '(' ASSIGN ';' EXPR ';' ASSIGN ')' STMT

   49 IF_S: IF '(' EXPR ')' STMT ELSE STMT
   50     | IF '(' EXPR ')' STMT

   51 EXPR: UNOP
   52     | ADDIOP
   53     | MULTOP
   54     | RELAOP
   55     | EQLTOP
   56     | CALL
   57     | '(' EXPR ')'
   58     | ID_S
   59     | INTNUM
   60     | FLOATNUM

   61 UNOP: UNARY EXPR

   62 ADDIOP: EXPR '+' EXPR
   63       | EXPR '-' EXPR

   64 MULTOP: EXPR '*' EXPR
   65       | EXPR '/' EXPR

   66 RELAOP: EXPR '>' EXPR
   67       | EXPR '<' EXPR
   68       | EXPR ">=" EXPR
   69       | EXPR "<=" EXPR

   70 EQLTOP: EXPR "==" EXPR
   71       | EXPR "!=" EXPR

   72 ID_S: ID EXPR
   73     | ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 13 14 15 16 17 18 19 42 43 46 47 48 49 50 57
')' (41) 12 13 14 15 16 17 18 19 42 43 46 47 48 49 50 57
'*' (42) 64
'+' (43) 62
',' (44) 8 9 44
'-' (45) 63
'/' (47) 65
';' (59) 4 5 6 7 26 27 28 29 30 31 42 43 47 48
'<' (60) 67
'=' (61) 40 41
'>' (62) 66
'[' (91) 8 10 40
']' (93) 8 10 40
'{' (123) 22 23 24 25
'}' (125) 22 23 24 25
error (256)
INTNUM (258) 8 10 59
FLOATNUM (259) 60
ID (260) 8 9 10 11 12 13 14 15 16 17 18 19 40 41 42 43 72 73
INT (261) 4 6 12 13 16 17 20 21
FLOAT (262) 5 7 14 15 18 19
FOR (263) 48
WHILE (264) 46 47
DO (265) 47
IF (266) 49 50
ELSE (267) 49
RELA (268)
EQLT (269)
RETURN (270) 30 31
UNARY (271) 61
">=" (272) 68
"<=" (273) 69
"==" (274) 70
"!=" (275) 71


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
PROGRAM (37)
    on left: 1 2 3, on right: 0
DECLARATION (38)
    on left: 4 5 6 7, on right: 1 2 4 5 22 24
IDENTIFIER (39)
    on left: 8 9 10 11, on right: 4 5 6 7 8 9 20 21
FUNCTION (40)
    on left: 12 13 14 15 16 17 18 19, on right: 1 3 12 14 16 18
PARAMETER (41)
    on left: 20 21, on right: 12 13 14 15 20
COMPOUNDSTMT (42)
    on left: 22 23 24 25, on right: 12 13 14 15 16 17 18 19 38 39
STMT (43)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39, on right: 22
    23 26 28 30 32 34 36 38 46 47 48 49 50
ASSIGN (44)
    on left: 40 41, on right: 26 27 48
CALL (45)
    on left: 42 43, on right: 28 29 56
ARG (46)
    on left: 44 45, on right: 42 44
WHILE_S (47)
    on left: 46 47, on right: 32 33
FOR_S (48)
    on left: 48, on right: 34 35
IF_S (49)
    on left: 49 50, on right: 36 37
EXPR (50)
    on left: 51 52 53 54 55 56 57 58 59 60, on right: 30 31 40 41 44
    45 46 47 48 49 50 57 61 62 63 64 65 66 67 68 69 70 71 72
UNOP (51)
    on left: 61, on right: 51
ADDIOP (52)
    on left: 62 63, on right: 52
MULTOP (53)
    on left: 64 65, on right: 53
RELAOP (54)
    on left: 66 67 68 69, on right: 54
EQLTOP (55)
    on left: 70 71, on right: 55
ID_S (56)
    on left: 72 73, on right: 58


State 0

    0 $accept: . PROGRAM $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2

    PROGRAM      go to state 3
    DECLARATION  go to state 4
    FUNCTION     go to state 5


State 1

    4 DECLARATION: INT . IDENTIFIER ';' DECLARATION
    6            | INT . IDENTIFIER ';'
   12 FUNCTION: INT . ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT . ID '(' PARAMETER ')' COMPOUNDSTMT
   16         | INT . ID '(' ')' COMPOUNDSTMT FUNCTION
   17         | INT . ID '(' ')' COMPOUNDSTMT

    ID  shift, and go to state 6

    IDENTIFIER  go to state 7


State 2

    5 DECLARATION: FLOAT . IDENTIFIER ';' DECLARATION
    7            | FLOAT . IDENTIFIER ';'
   14 FUNCTION: FLOAT . ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT . ID '(' PARAMETER ')' COMPOUNDSTMT
   18         | FLOAT . ID '(' ')' COMPOUNDSTMT FUNCTION
   19         | FLOAT . ID '(' ')' COMPOUNDSTMT

    ID  shift, and go to state 8

    IDENTIFIER  go to state 9


State 3

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 10


State 4

    1 PROGRAM: DECLARATION . FUNCTION
    2        | DECLARATION .

    INT    shift, and go to state 11
    FLOAT  shift, and go to state 12

    $default  reduce using rule 2 (PROGRAM)

    FUNCTION  go to state 13


State 5

    3 PROGRAM: FUNCTION .

    $default  reduce using rule 3 (PROGRAM)


State 6

    8 IDENTIFIER: ID . '[' INTNUM ']' ',' IDENTIFIER
    9           | ID . ',' IDENTIFIER
   10           | ID . '[' INTNUM ']'
   11           | ID .
   12 FUNCTION: INT ID . '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT ID . '(' PARAMETER ')' COMPOUNDSTMT
   16         | INT ID . '(' ')' COMPOUNDSTMT FUNCTION
   17         | INT ID . '(' ')' COMPOUNDSTMT

    '['  shift, and go to state 14
    ','  shift, and go to state 15
    '('  shift, and go to state 16

    $default  reduce using rule 11 (IDENTIFIER)


State 7

    4 DECLARATION: INT IDENTIFIER . ';' DECLARATION
    6            | INT IDENTIFIER . ';'

    ';'  shift, and go to state 17


State 8

    8 IDENTIFIER: ID . '[' INTNUM ']' ',' IDENTIFIER
    9           | ID . ',' IDENTIFIER
   10           | ID . '[' INTNUM ']'
   11           | ID .
   14 FUNCTION: FLOAT ID . '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT ID . '(' PARAMETER ')' COMPOUNDSTMT
   18         | FLOAT ID . '(' ')' COMPOUNDSTMT FUNCTION
   19         | FLOAT ID . '(' ')' COMPOUNDSTMT

    '['  shift, and go to state 14
    ','  shift, and go to state 15
    '('  shift, and go to state 18

    $default  reduce using rule 11 (IDENTIFIER)


State 9

    5 DECLARATION: FLOAT IDENTIFIER . ';' DECLARATION
    7            | FLOAT IDENTIFIER . ';'

    ';'  shift, and go to state 19


State 10

    0 $accept: PROGRAM $end .

    $default  accept


State 11

   12 FUNCTION: INT . ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT . ID '(' PARAMETER ')' COMPOUNDSTMT
   16         | INT . ID '(' ')' COMPOUNDSTMT FUNCTION
   17         | INT . ID '(' ')' COMPOUNDSTMT

    ID  shift, and go to state 20


State 12

   14 FUNCTION: FLOAT . ID '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT . ID '(' PARAMETER ')' COMPOUNDSTMT
   18         | FLOAT . ID '(' ')' COMPOUNDSTMT FUNCTION
   19         | FLOAT . ID '(' ')' COMPOUNDSTMT

    ID  shift, and go to state 21


State 13

    1 PROGRAM: DECLARATION FUNCTION .

    $default  reduce using rule 1 (PROGRAM)


State 14

    8 IDENTIFIER: ID '[' . INTNUM ']' ',' IDENTIFIER
   10           | ID '[' . INTNUM ']'

    INTNUM  shift, and go to state 22


State 15

    9 IDENTIFIER: ID ',' . IDENTIFIER

    ID  shift, and go to state 23

    IDENTIFIER  go to state 24


State 16

   12 FUNCTION: INT ID '(' . PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT ID '(' . PARAMETER ')' COMPOUNDSTMT
   16         | INT ID '(' . ')' COMPOUNDSTMT FUNCTION
   17         | INT ID '(' . ')' COMPOUNDSTMT

    INT  shift, and go to state 25
    ')'  shift, and go to state 26

    PARAMETER  go to state 27


State 17

    4 DECLARATION: INT IDENTIFIER ';' . DECLARATION
    6            | INT IDENTIFIER ';' .

    INT    shift, and go to state 28
    FLOAT  shift, and go to state 29

    INT       [reduce using rule 6 (DECLARATION)]
    FLOAT     [reduce using rule 6 (DECLARATION)]
    $default  reduce using rule 6 (DECLARATION)

    DECLARATION  go to state 30


State 18

   14 FUNCTION: FLOAT ID '(' . PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT ID '(' . PARAMETER ')' COMPOUNDSTMT
   18         | FLOAT ID '(' . ')' COMPOUNDSTMT FUNCTION
   19         | FLOAT ID '(' . ')' COMPOUNDSTMT

    INT  shift, and go to state 25
    ')'  shift, and go to state 31

    PARAMETER  go to state 32


State 19

    5 DECLARATION: FLOAT IDENTIFIER ';' . DECLARATION
    7            | FLOAT IDENTIFIER ';' .

    INT    shift, and go to state 28
    FLOAT  shift, and go to state 29

    INT       [reduce using rule 7 (DECLARATION)]
    FLOAT     [reduce using rule 7 (DECLARATION)]
    $default  reduce using rule 7 (DECLARATION)

    DECLARATION  go to state 33


State 20

   12 FUNCTION: INT ID . '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   13         | INT ID . '(' PARAMETER ')' COMPOUNDSTMT
   16         | INT ID . '(' ')' COMPOUNDSTMT FUNCTION
   17         | INT ID . '(' ')' COMPOUNDSTMT

    '('  shift, and go to state 16


State 21

   14 FUNCTION: FLOAT ID . '(' PARAMETER ')' COMPOUNDSTMT FUNCTION
   15         | FLOAT ID . '(' PARAMETER ')' COMPOUNDSTMT
   18         | FLOAT ID . '(' ')' COMPOUNDSTMT FUNCTION
   19         | FLOAT ID . '(' ')' COMPOUNDSTMT

    '('  shift, and go to state 18


State 22

    8 IDENTIFIER: ID '[' INTNUM . ']' ',' IDENTIFIER
   10           | ID '[' INTNUM . ']'

    ']'  shift, and go to state 34


State 23

    8 IDENTIFIER: ID . '[' INTNUM ']' ',' IDENTIFIER
    9           | ID . ',' IDENTIFIER
   10           | ID . '[' INTNUM ']'
   11           | ID .

    '['  shift, and go to state 14
    ','  shift, and go to state 15

    $default  reduce using rule 11 (IDENTIFIER)


State 24

    9 IDENTIFIER: ID ',' IDENTIFIER .

    $default  reduce using rule 9 (IDENTIFIER)


State 25

   20 PARAMETER: INT . IDENTIFIER PARAMETER
   21          | INT . IDENTIFIER

    ID  shift, and go to state 23
